--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+    {% include 'head.html' %}
 <body>
-    <h1>Hello World!</h1>
+    {% include 'header.html' %}
+    {% block contents %}
+        <div style="height: 10rem; background-color: aqua; margin: 2rem; border-radius:1rem">
+
+        </div>
+    {% endblock %}
+    {% include 'footer.html' %}
 </body>
 </html>
