--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,5 @@
 <div style="text-align: center">
-    <div>
+    <div style="margin: 2rem 0; font-family: 'Quicksand', sans-serif;">
         <h1>Pragmatic</h1>
     </div>
     <div>
