--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
 <div style="text-align: center">
-    <div style="margin-top: 2rem">
+    <div class="pragmatic_footer_button">
         <span>공지사항</span>
         <span>제휴문의</span>
         <span>서비스 소개</span>
     </div>
-    <div style="margin: 2rem 0; font-family: 'Quicksand', sans-serif;">
+    <div class="pragmatic_header_logo">
         <h5>Pragmatic</h5>
     </div>
 </div>
