--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
 <div style="text-align: center">
-    <div style="margin: 2rem 0; font-family: 'Quicksand', sans-serif;">
+    <div class="pragmatic_header_logo">
         <h1>Pragmatic</h1>
     </div>
-    <div>
+    <div class="pragmatic_header_button">
         <span>nav1</span>
         <span>nav2</span>
         <span>nav3</span>
