--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,8 +2,23 @@
 
 {% block contents %}
 
-    <div style="height: 10rem; background-color: aqua; margin: 2rem; border-radius:1rem">
+    <style>
+        .testing {
+            background-color: yellow;
+            height: 48px;
+            width: 48px;
+            margin: 1rem;
+            border-radius: .5rem;
+        }
+    </style>
+    <div style="height: 30rem; background-color: aqua; margin: 2rem; border-radius:1rem">
         <h1>TEST</h1>
+
+        <div class="testing" style="display: block">inline-block</div>
+        <div class="testing" style="display: inline">inline-block</div>
+        <div class="testing" style="display: inline-block">inline-block</div>
+        <div class="testing" style="display: none">none</div>
+        <div class="testing"></div>
     </div>
 
 {% endblock %}
