--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -1,25 +1,8 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-
-    <style>
-        .testing {
-            background-color: yellow;
-            height: 48px;
-            width: 48px;
-            margin: 1rem;
-            border-radius: .5rem;
-            display: inline-block;
-        }
-    </style>
-    <div style="height: 30rem; background-color: aqua;
-    margin: 2rem; border-radius:1rem; font-size: 2rem">
-        <h1>TEST</h1>
-
-        <div class="testing" style="height: 48px; width: 48px">px</div>
-        <div class="testing" style="height: 3rem; width: 3rem">rem</div>
-        <div class="testing" style="height: 3em; width: 3em">em</div>
-        <div class="testing" style="height: 30%; width: 30%">%</div>
+    <div style="margin: 2rem; text-align: center">
+        <h1>METHOD</h1>
 
     </div>
 
