--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -3,7 +3,7 @@
 {% block contents %}
     <div style="margin: 2rem; text-align: center">
         <h1>METHOD</h1>
-
+        <h3>{{ text }}</h3>
     </div>
 
 {% endblock %}
