--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -10,16 +10,19 @@
         <div>
             {{ target_user.date_joined }}
         </div>
-        <div>
-            <a href="{% url 'accountapp:update' pk=target_user.pk  %}">
-                Update Info
-            </a>
-        </div>
-        <div>
-            <a href="{% url 'accountapp:delete' pk=target_user.pk  %}">
-                Quit
-            </a>
-        </div>
+
+        {% if user == target_user %}
+            <div>
+                <a href="{% url 'accountapp:update' pk=target_user.pk  %}">
+                    Update Info
+                </a>
+            </div>
+            <div>
+                <a href="{% url 'accountapp:delete' pk=target_user.pk  %}">
+                    Quit
+                </a>
+            </div>
+        {% endif %}
     </div>
 
 
